--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>signature</title>
+
+</head>
+
+<body>
     <style>
         * {
             margin: 0;
@@ -19,15 +23,14 @@
             background-color: #9ebfe3;
         }
     </style>
-</head>
-<body>
-    <div style="width: 500px; height: 240px; background: url(./assets/sample1/frame.png);align-items: center; background-size: cover;border-radius: 8px; padding: 5px;">
+    <div style="width: 500px; height: 240px; align-items: center; background-size: cover;border-radius: 8px; padding: 5px;">
         <table
         style="border: none;width: 100px; margin: 10px; border-right: 3px solid rgb(25, 74, 209);float: left;">
             <tr>
                 <td style="padding: 10px;">
-                <img width="100px" height="125px" style="border-radius: 8px; border: none;" src="./assets/sample1/profile.jpg" alt="">
+                <img width="100px" height="125px" style="border-radius: 8px; border: none;" src="https://i.postimg.cc/xTK8s364/test.png" alt="profile" alt="">
                 </td>
+                
             </tr>
         </table> 
         <table>
@@ -40,27 +43,29 @@
             </tr>
             <tr>
                 <td style="display: inline; margin-right: 10px;">
-                    <img style="height: 22px;" src="./assets/whatsapp.png" alt="">
+                    <img style="height: 15px;" src="https://i.postimg.cc/YSZ3nM4X/whatsapp.png" alt="">
                 </td>
                 <td style="display: inline; ">0321-1234567</td>
             </tr>
             <tr>
                 <td style="display: inline; margin-right: 10px;">
-                    <img style="height: 22px;" src="./assets/gmail.png" alt="">
+                  <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"> <img style="height: 15px;" src="https://i.postimg.cc/xCNsncDD/gmail.png" alt=""></a>
                 </td>
-                <td style="display: inline;" ><a style="color: rgb(19, 18, 18); text-decoration: none;"href="https://www.google.com/" target="_blank">www.google.com</a></td>
+                <td style="display: inline;" ><a style="color: rgb(19, 18, 18); text-decoration: none;"href="https://mail.google.com/mail/u/0/#inbox" target="_blank">www.gmail.com</a></td>   
             </tr>
             <tr>
                 <td style="display: inline; margin-right: 10px;">
-                    <img style="height: 22px;" src="./assets/linkedin.png" alt="">
+                  <a href="https://www.linkedin.com/login" target="_blank">  <img style="height: 22px;" src="https://i.postimg.cc/6Q836NHx/linkedin.png" alt=""></a>
                 </td>
+
                 <td style="display: inline;" ><a style="color: rgb(15, 15, 15); text-decoration: none; "href="https://www.linkedin.com/login" target="_blank">www.linkedin.com</a></td>
             </tr>
             <tr>
                 <td style="display: inline; margin-right: 10px;">
-                    <img style="height: 22px;" src="./assets/youtube.png" alt="">
+                  <a href="https://www.youtube.com/" target="_blank"><img style="height: 22px;" src="https://i.postimg.cc/c1RJLhcC/youtube.png" alt=""></a>
                 </td>
-                <td style="display: inline;" ><a style="color: rgb(12, 12, 12); text-decoration: none;"href="https://www.youtube.com/" target="_blank">www.youtube.com</a></td>
+                <td style="display: inline;" ><a style="color: rgb(10, 10, 10); text-decoration: none;"href="https://www.youtube.com/" target="_blank">www.youtube.com</a></td>
+                <a href=""></a>
             </tr>
 
         </table>
